# DuckieRR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh
RobotRaconteur_0.8/: .gitignore  RobotRaconteur-0.8.1-beta-Python.linux-armhf-py2.7-2016-07-18.tar
camera/: CMakeLists.txt  camera_service.robdef
camera/CPP/: CMakeLists.txt  CameraNode.cpp  CameraNode.h  Duckiebot_Interface.h  Duckiebot_Interface_stubskel.cpp  Duckiebot_Interface_stubskel.h  camera_impl.cpp  camera_impl.h  camera_interface.cpp  camera_service.robdef  main.cpp
camera/CPP/CameraNode/: CMakeLists.txt  CameraNode.cpp  CameraNode.h  main.cpp
camera/include/: CMakeLists.txt
camera/python/: CMakeLists.txt  CameraNode.in.py  CameraNode.py.in  camera_interface.py  camera_interface.py.in
camera/src/: CMakeLists.txt  camera_interface.py
clients/: ConnectionInfo.py  DisplayImage.py  DuckieClient.m  DuckieClient.py  DuckieImageToImage.m
clients/DriveByAngle/: .gitignore  CalibrateDetector.py  DriveByAngle.py  DriveByAngle_onDuckie.py  DriveByAngle_onDuckie_rect.py  default.yaml  lab_2_24.yaml
clients/DriveByAngle/CPP/: .gitignore  CMakeLists.txt  HelperFunctions.hpp  default.yaml  main.cpp
clients/TauBraking/: TauBraking.py  default.yaml
dependencies/: .gitignore  RobotRaconteurCommon.cmake
dependencies/DuckiebotRobdef/: .gitignore  CMakeLists.txt  camera.robdef  drive.robdef  duckiebot.robdef  groundProjection.robdef  joymapper.robdef  joystick.robdef  laneInfo.robdef  lineDetector.robdef
dependencies/DuckiebotRobdef/CPP_Thunk/: Duckiebot.h  Duckiebot__Camera.h  Duckiebot__Camera_stubskel.cpp  Duckiebot__Camera_stubskel.h  Duckiebot__Drive.h  Duckiebot__Drive_stubskel.cpp  Duckiebot__Drive_stubskel.h  Duckiebot__GroundProjection.h  Duckiebot__GroundProjection_stubskel.cpp  Duckiebot__GroundProjection_stubskel.h  Duckiebot__LaneInfo.h  Duckiebot__LaneInfo_stubskel.cpp  Duckiebot__LaneInfo_stubskel.h  Duckiebot__LineDetector.h  Duckiebot__LineDetector_stubskel.cpp  Duckiebot__LineDetector_stubskel.h  Duckiebot_stubskel.cpp  Duckiebot_stubskel.h
drive/: CMakeLists.txt
drive/include/: CMakeLists.txt
drive/include/adafruit_drivers/: CMakeLists.txt  setup.py
drive/include/dagu_car/: CMakeLists.txt  setup.py
drive/src/: CMakeLists.txt  DriveNode.in.py  DriveNode.py  drive_interface.py
joy/: CMakeLists.txt  JoyMapperNode.in.py  JoyNode.in.py  joyDemo.py
joy/config/: default.yaml
laneControl/: CMakeLists.txt
laneControl/src/: CMakeLists.txt  laneControl-RT.cpp
laneInfo/: CMakeLists.txt
laneInfo/config/: default.yaml  default_CameraIntrinsic.yaml  default_GP.yaml  default_LD.yaml  default_Lane.yaml
laneInfo/include/: CMakeLists.txt  setup.py
laneInfo/include/line_detector/: __init__.py  line_detector_hsv.py  line_detector_interface.py  stats.py
laneInfo/src/: CMakeLists.txt  GroundProjectionNode.in.py  LaneFilterNode.in.py  LaneFilterNode.py  LaneInfoNode.in.py  LaneInfoNode.py.in  LaunchLaneInfo.in.py  LineDetectorNode.in.py  LineDetectorNode.py.in  laneInfo_interface.py.in  lineDetector_interface.py.in
utils/: CMakeLists.txt  setup.py
utils/duckie_CPP_utils/: Configurable.cpp  Configurable.h
utils/duckie_utils/: CMakeLists.txt  configurable.py  image.py  instantiate_utils.py  setup.py
utils/duckie_utils/duckie_utils/: configurable.py  image.py  instantiate_utils.py  timekeeper.py
utils/rr_utils/: CMakeLists.txt  setup.py
utils/rr_utils/rr_utils/: __init__.py  launch.py  rr_node_interface.py
